2004-12-22  Dan Winship  <danw@novell.com>

	* generator/Signal.cs: fix some WriteLine()s that should have been
	Write()s

2004-12-22  Dan Winship  <danw@novell.com>

	* sources/gtk-sharp-sources.xml: exclude a bunch of uninstalled
	gtk headers.

	* gtk/gtk-api.raw: regen

	* gtk/Gtk.metadata: Remove some explicit hiding of things that
	shouldn't have been there anyway. Hide a few types that just show
	up as unusable stubs.

2004-12-22  Mike Kestner  <mkestner@novell.com>

	* gdk/gdk-api.raw : update enum values.
	* gnome/gnome-api.raw : update enum values.
	* gtk/gtk-api.raw : update enum values.
	* pango/pango-api.raw : update enum values.
	* parser/gapi2xml.pl : pull whitespace out of enum prefixing logic.
	[Fixes #70593]

2004-12-21  Mike Kestner  <mkestner@novell.com>

	* glib/Argv.cs : argv marshaling class.
	* glib/Makefile.am : add file.
	* glib/Marshaller.cs : mark the argv methods obsolete.
	* gtk/Application.cs : use GLib.Argv. [Fixes #68812]

2004-12-21  Dan Winship  <danw@novell.com>

	* generator/CallbackGen.cs:
	* generator/CodeGenerator.cs: 
	* generator/ManagedCallString.cs:
	* generator/Property.cs: Remove unused vars

	* generator/Method.cs (GetHashCode): have to implement this since
	we're overriding Equals.

	* generator/CallbackGen.cs: print a message when generating a
	broken struct-returning callback. (Currently affects
	GtkSharp.TextSegSplitFuncNative and
	GtkSharp.TextSegCleanupFuncNative)

	* gdk/glue/device.c: 
	* gdk/glue/dragcontext.c: Add missing prototypes

	* gtk/Gtk.metadata: Mark SeparatorToolItem.Draw "new". Re-rename
	CheckMenuItem.Toggled to EmitToggled rather than Toggle, since
	that's a better description of what it does.

	* gtk/CheckMenuItem.custom: implement a "Toggle" method that does
	what the documentation claims it does.

	* gtk/NodeStore.cs: remove unused var

	* gnome/Gnome.metadata: mark DateEdit.Flags, Dialog.Default, and
	PropertyBox.State "new". Hide GnomePixmapEntry.GnomeEntry and