@@ -1,0 +1,116 @@
+<Type Name="BindingAttribute" FullName="Gtk.BindingAttribute">
+  <TypeSignature Language="C#" Value="public sealed class BindingAttribute : System.Attribute" Maintainer="auto" />
+  <AssemblyInfo>
+    <AssemblyName>gtk-sharp</AssemblyName>
+    <AssemblyPublicKey>[00 24 00 00 04 80 00 00 94 00 00 00 06 02 00 00 00 24 00 00 52 53 41 31 00 04 00 00 01 00 01 00 71 EB 6C 55 75 52 9C BF 72 44 F7 A6 EA 05 62 84 F9 EA E0 3B CF F2 CC 13 2C 9C 49 0A B3 09 EA B0 B5 6B CE 44 9D F5 03 D9 C0 A8 1E 52 05 85 CD BE 70 E2 FB 90 43 4B AC 04 FA 62 22 A8 00 98 B7 A1 A7 B3 AF 99 1A 41 23 24 BB 43 25 F6 B8 65 BB 64 EB F6 D1 C2 06 D5 73 2D DF BC 70 A7 38 9E E5 3E 0C 24 6E 32 79 74 1A D0 05 03 E4 98 42 E1 9B F3 7B 19 8B 40 21 26 CB 36 89 C2 EA 64 96 A4 7C B4]</AssemblyPublicKey>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <AssemblyCulture>neutral</AssemblyCulture>
+    <Attributes />
+  </AssemblyInfo>
+  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
+  <Docs>
+    <summary>Registers a key binding for a class.</summary>
+    <remarks />
+  </Docs>
+  <Base>
+    <BaseTypeName>System.Attribute</BaseTypeName>
+  </Base>
+  <Interfaces />
+  <Attributes>
+    <Attribute>
+      <AttributeName>System.AttributeUsageAttribute</AttributeName>
+    </Attribute>
+  </Attributes>
+  <Members>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public BindingAttribute (Gdk.Key key, string handler, object [] parms);" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters>
+        <Parameter Name="key" Type="Gdk.Key" />
+        <Parameter Name="handler" Type="System.String" />
+        <Parameter Name="parms" Type="System.Object[]" />
+      </Parameters>
+      <Docs>
+        <summary>Constructs a Binding attribute with no key modifier.</summary>
+        <param name="key">a key value</param>
+        <param name="handler">name of the instance method to call.</param>
+        <param name="parms">an array containing the parameters to pass to the handler.</param>
+        <returns>a <see cref="T:Gtk.BindingAttribute" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public BindingAttribute (Gdk.Key key, Gdk.ModifierType mod, string handler, object [] parms);" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters>
+        <Parameter Name="key" Type="Gdk.Key" />
+        <Parameter Name="mod" Type="Gdk.ModifierType" />
+        <Parameter Name="handler" Type="System.String" />
+        <Parameter Name="parms" Type="System.Object[]" />
+      </Parameters>
+      <Docs>
+        <summary>Constructs a Binding attribute for a key and modifier.</summary>
+        <param name="key">a key value</param>
+        <param name="mod">a modifier type, like ctrl or shift</param>
+        <param name="handler">name of the instance method to call.</param>
+        <param name="parms">an array containing the parameters to pass to the handler.</param>
+        <returns>a <see cref="T:Gtk.BindingAttribute" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="Key">
+      <MemberSignature Language="C#" Value="public Gdk.Key Key { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Key</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>The key value</summary>
+        <returns>a <see cref="T:Gdk.Key" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="Mod">
+      <MemberSignature Language="C#" Value="public Gdk.ModifierType Mod { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.ModifierType</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>The key modifier, such as ctrl or shift.</summary>
+        <returns>a <see cref="T:Gdk.ModifierType" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="Handler">
+      <MemberSignature Language="C#" Value="public string Handler { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.String</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>The name of the instance method to call on activation.</summary>
+        <returns>a <see cref="T:System.String" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="Parms">
+      <MemberSignature Language="C#" Value="public object [] Parms { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Object[]</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>An Array of parameters to pass to the Handler.</summary>
+        <returns>a <see cref="T:System.Object[]" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+  </Members>
+</Type>
