@@ -1,3 +1,8 @@
+2004-12-23  Mike Kestner  <mkestner@novell.com>
+
+	* en/GLib/ClassInitializerAttribute.xml : doc new attr.
+	* en/Gtk/BindingAttribute.xml : doc new attr.
+
 2004-12-22  Dan Winship  <danw@novell.com>
 
 	* en/Gtk/Decorated.xml:
