@@ -1,3 +1,15 @@
+2004-12-23  Mike Kestner  <mkestner@novell.com>
+
+	* glib/ClassInitializerAttribute.cs : new attr for identifying type.
+	inialization methods to be run by RegisterGType.
+	* glib/Makefile.am : add file.
+	* glib/Object.cs : add private method to invoke ClassInitializers.
+	* gtk/glue/widget.c : some new glue for binding registration.
+	* gtk/BindingAttribute.cs : new attr for registering key bindings.
+	* gtk/Makefile.am : add file.
+	* gtk/Widget.custom : add ClassInitializer method to scan types
+	for [Binding] and register key bindings.
+
 2004-12-22  Dan Winship  <danw@novell.com>
 
 	* generator/Signal.cs: fix some WriteLine()s that should have been
